# onchain-rover-solana

./: .dockerignore  .env.compose.example  .env.example  .gitignore  .railwayignore  DEMO_RUNBOOK.md  Dockerfile  IMPROVEMENTS.md  Onchain_Rover_Deck.pptx  PITCH.md  README.md  ROBOTICS.md  STREAMING.md  SUBMISSION_PLAYBOOK.md  TOKENOMICS.md  docker-compose.yml  package.json
.github/workflows/: solana.yml
agent-client/: README.md  requirements.txt  rover_hirer.py
cache/: solidity-files-cache.json
chain/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
chain/contracts/: MockRaceToken.sol  RaceEscrow.sol
chain/scripts/: accounts.ts  artifacts.ts  deploy-local.ts  e2e-local-race.ts  export-local.ts
chain/test/: RaceEscrow.test.ts
contracts/: ReputationRegistry.sol  Treasury.sol
contracts/erc7730/: treasury.json
cre-workflow/: config.json
deploy/: Dockerfile.servers  docker-compose.yml
docs/: ADVANCED_SOLANA.md  DEPLOY_SOLANA.md  DIMOS_INTEGRATION.md  EARTH_ROVERS.md  HARDWARE_BRINGUP.md  HELIUS.md  JETSON_BRIDGE.md  LOCAL_CHAIN_RACE_HARNESS.md  MAINNET_READINESS.md  SOLANA_NATIVE_MIGRATION.md  SOLANA_PORT.md  TOKEN_PROGRAM_SPEC.md
perception-service/: README.md  requirements.txt  vlm_server.py
robot/: agent.py  api.py  brain.py  checkpoint.py  demo_doctor.py  demo_film.py  dimos_agent.py  drive_log.py  emote.py  gibber.py  jetson.sh  motion_check.py  nav_policy_server.py  neg_test.py  negotiate.py  reason.py  requirements-servers.txt  rover.py  run_log.py  show.py  voice.py
robot-harness/: Cargo.toml  README.md
robot-harness/deploy/: README.md  capture-jetson-image.sh  configure-stage-wifi.sh  jetson-install.sh  reset-good-state.sh  reset-jetson-over-ssh.sh  restore-jetson-image.sh  robot-harness.service  stage-targets.json
robot-harness/scripts/: drive_smoke.py
robot-harness/src/: main.rs
robot/tests/: test_emote.py  test_stack.py
scripts/: demo_down.sh  demo_up.sh  e2e-local-race.sh  jetson_up.sh  tokenomics_model.py
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/public/: broadcast.html  field.html  index.html  ledger.bundle.js  ledger.html  lobby.html  mux.html  pilot-app.bundle.js  pilot-react.bundle.js  pilot-react.html  pilot.html  race.html  round.html  show-links.html  wall.html
sidecar/src/: achievements.ts  apriltag-finish-spike.ts  chain.ts  (+62 more)
site/: broadcast.html  index.html  overlay.html
solana/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
solana/programs/clanker5000/: Cargo.toml
solana/programs/clanker5000/src/: lib.rs
solana/scripts/: init-devnet.mjs
solana/tests/: clanker5000.ts  token_integration.ts
tools/: broadcast-harness.cjs  unit.cjs  verify.sh
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+16 files in other folders)
