[package]
name = "rover-harness"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "rover-harness"
path = "src/main.rs"

[[bin]]
name = "rover-deploy-check"
path = "src/bin/rover-deploy-check.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
serialport = "4.6"
tokio = { version = "1.43", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
