[package]
name = "clanker5000"
version = "0.1.0"
description = "Clanker 5000 — native-Solana race escrow + parimutuel market for The Clanker 500"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "clanker5000"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
